syntax = "proto3";

package Message; //will be placed in a namespace matching the package name if csharp_namespace is not specified
option csharp_namespace = "GRpc.Messages";
import "message.proto";

service CandidateService {
    rpc CreateCv (stream Candidate) returns (CreateCvResponse);
    rpc DownloadCv (DownloadByName) returns (stream Candidate);
    rpc CreateDownloadCv (Candidate) returns (Candidate);
}